--- a/plik.css
+++ b/plik.css
@@ -1,6 +1,6 @@
 body {
 
-background-image:url(esport1.jpg);
+background-image:url("esport1.jpg");
 background-attachment: fixed;
 background-repeat: no-repeat;
 }
