--- a/plik.css
+++ b/plik.css
@@ -1,6 +1,6 @@
 body {
 
-background-image:url("esport.jpg");
+background-image:url(esport.jpg);
 background-attachment: fixed;
 background-repeat: no-repeat;
 }
