--- a/pasha.css
+++ b/pasha.css
@@ -1,5 +1,5 @@
 body {
-background-image:url(esport.jpg);
+background-image:url(esport.JPG);
 background-attachment: fixed;
 background-repeat: no-repeat;
 
