--- a/s1mple.css
+++ b/s1mple.css
@@ -1,5 +1,5 @@
 body {
-background-image:url(esport1.jpg);
+background-image:url(esport.JPG);
 background-attachment: fixed;
 background-repeat: no-repeat;
 
