--- a/faker.css
+++ b/faker.css
@@ -2,6 +2,7 @@ body {
 background-image:url(esport.JPG);
 background-attachment: fixed;
 background-repeat: no-repeat;
+background-size:cover;
 
 }
 #MENU{
